--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ant-design/icons": "^5.3.1",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/lodash": "^4.17.14",
     "antd": "^5.15.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
